// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calendar year is 2021, and quarters start on January 1st 1`] = `
<div>
  <svg>
    <g
      class="intervals"
    >
      <path
        d="M0,-456A456,456,0,0,1,231.954,-392.598L81.387,-137.754A160,160,0,0,0,0,-160Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M231.954,-392.598A456,456,0,0,1,387.517,-240.347L135.971,-84.332A160,160,0,0,0,81.387,-137.754Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M387.517,-240.347A456,456,0,0,1,455.887,-10.138L159.96,-3.557A160,160,0,0,0,135.971,-84.332Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M455.887,-10.138A456,456,0,0,1,401.441,216.29L140.856,75.891A160,160,0,0,0,159.96,-3.557Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M401.441,216.29A456,456,0,0,1,235.605,390.418L82.668,136.989A160,160,0,0,0,140.856,75.891Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M235.605,390.418A456,456,0,0,1,12.1,455.839L4.246,159.944A160,160,0,0,0,82.668,136.989Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M12.1,455.839A456,456,0,0,1,-221.455,398.615L-77.703,139.865A160,160,0,0,0,4.246,159.944Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-221.455,398.615A456,456,0,0,1,-393.428,230.544L-138.045,80.893A160,160,0,0,0,-77.703,139.865Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-393.428,230.544A456,456,0,0,1,-455.958,6.214L-159.985,2.18A160,160,0,0,0,-138.045,80.893Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-455.958,6.214A456,456,0,0,1,-395.56,-226.866L-138.793,-79.602A160,160,0,0,0,-159.985,2.18Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-395.56,-226.866A456,456,0,0,1,-231.954,-392.598L-81.387,-137.754A160,160,0,0,0,-138.793,-79.602Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-231.954,-392.598A456,456,0,0,1,0,-456L0,-160A160,160,0,0,0,-81.387,-137.754Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on July 1st 1`] = `
<div>
  <svg>
    <g
      class="intervals"
    >
      <path
        d="M0,-456A456,456,0,0,1,231.954,-392.598L81.387,-137.754A160,160,0,0,0,0,-160Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M231.954,-392.598A456,456,0,0,1,399.407,-220.024L140.143,-77.201A160,160,0,0,0,81.387,-137.754Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M399.407,-220.024A456,456,0,0,1,455.962,5.887L159.987,2.066A160,160,0,0,0,140.143,-77.201Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M455.962,5.887A456,456,0,0,1,389.401,237.283L136.632,83.257A160,160,0,0,0,159.987,2.066Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M389.401,237.283A456,456,0,0,1,221.455,398.615L77.703,139.865A160,160,0,0,0,136.632,83.257Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M221.455,398.615A456,456,0,0,1,-12.1,455.839L-4.246,159.944A160,160,0,0,0,77.703,139.865Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-12.1,455.839A456,456,0,0,1,-242.29,386.305L-85.014,135.546A160,160,0,0,0,-4.246,159.944Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-242.29,386.305A456,456,0,0,1,-393.758,229.98L-138.161,80.695A160,160,0,0,0,-85.014,135.546Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-393.758,229.98A456,456,0,0,1,-455.996,-1.962L-159.999,-0.689A160,160,0,0,0,-138.161,80.695Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-455.996,-1.962A456,456,0,0,1,-395.56,-226.866L-138.793,-79.602A160,160,0,0,0,-159.999,-0.689Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-395.56,-226.866A456,456,0,0,1,-225.162,-396.533L-79.004,-139.134A160,160,0,0,0,-138.793,-79.602Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-225.162,-396.533A456,456,0,0,1,0,-456L0,-160A160,160,0,0,0,-79.004,-139.134Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;
